Fixing resume button on Safari

--- a/portfolio/src/components/about/About.css
+++ b/portfolio/src/components/about/About.css
@@ -198,3 +198,11 @@
         width: 199.9px;
     }
 }
+
+/* Large screens */
+@media (min-width: 1008px) {
+    .resume {
+        font-size: 12pt;
+        width: 199.9px;
+    }
+}
